remove .env file from git

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_WC_CUSTOMER_KEY = XXXXXXXXXXXXXXX
-NEXT_WC_SECRET = XXXXXXXXXXXXXXXXXXXXX
+NEXT_WC_CUSTOMER_KEY = ck_7d0a0a541e4fc91baf8b23e22031cf8502c76b24
+NEXT_WC_SECRET = cs_84669f4a9e954e566d4817d059786263b9a05ef7
 
-NEXT_API_HOST = XXXXXXXXXXXXXXX
+NEXT_API_HOST = https://www.inro.com.ua
 
-NEXT_PUBLIC_API_URL= XXXXXXXXXXXXXXXXXX
+NEXT_PUBLIC_API_URL= http://localhost:3000/api
