--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-menubar": "^1.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "class-variance-authority": "^0.7.0",
