--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
-  "extends": ["@babel/plugin-transform-private-property-in-object", "next/core-web-vitals"]
+  "extends": [
+    //"@babel/plugin-transform-private-property-in-object",
+     "next/core-web-vitals"]
 }
