--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react-dom": "^18",
     "react-use": "^17.5.1",
     "sharp": "^0.33.5",
+    "simple-zustand-devtools": "^1.1.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
