--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -19,6 +20,7 @@
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "qnpm": "^1.2.9",
@@ -34,11 +36,12 @@
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@babel/core": "^7.0.0",
     "@types/node": "^20",
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-core": "7.0.0-bridge.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
