--- a/package.json
+++ b/package.json
@@ -31,12 +31,15 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-hot-toast": "^2.4.1",
     "react-use": "^17.5.1",
+    "sequelize": "^6.37.4",
     "sharp": "^0.33.5",
     "simple-zustand-devtools": "^1.1.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "wpapi": "^1.2.2",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
