--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "jose": "^5.9.4",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "qnpm": "^1.2.9",
