--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sequelize": "^6.37.4",
     "sharp": "^0.33.5",
     "simple-zustand-devtools": "^1.1.0",
+    "spinners-react": "^1.0.7",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
