--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "handlebars": "^4.7.8",
     "jose": "^5.9.4",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "qnpm": "^1.2.9",
     "qs": "^6.13.0",
     "react": "^18",
@@ -47,7 +51,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
