--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-liqpay": "^1.3.0",
     "react-use": "^17.5.1",
     "sequelize": "^6.37.4",
     "sharp": "^0.33.5",
