--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^11.2.0",
     "handlebars": "^4.7.8",
     "jose": "^5.9.4",
+    "liqpay": "^0.0.1",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
     "nodemailer": "^6.9.15",
