--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "qs": "^6.13.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-use": "^17.5.1",
