--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-facebook-pixel": "^1.0.4",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
     "react-use": "^17.5.1",
+    "sass": "^1.82.0",
     "sharp": "^0.33.5",
     "simple-zustand-devtools": "^1.1.0",
     "spinners-react": "^1.0.7",
@@ -59,6 +61,7 @@
     "@types/qs": "^6.9.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-image-gallery": "^1.2.4",
     "@types/rss": "^0.0.32",
     "babel-core": "7.0.0-bridge.0",
     "eslint": "^8",
