--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
+    "react-select": "^5.9.0",
     "react-use": "^17.5.1",
     "sass": "^1.82.0",
     "sharp": "^0.33.5",
