--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "wpapi": "^1.2.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^5.0.0-rc.2"
   },
